# chess_score_calculator

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_options.cmake
include/chess_score_calculator/: chessboard.hpp  enums.hpp  piece.hpp  tile.hpp
src/: chess_score_calculator_main.cpp  chessboard.cpp  piece.cpp  tile.cpp
